# roadmap_builder

./: .gitignore  CLAUDE.md  PRD.md  README.md
.agents/plans/: add-critical-path-tests.md  auto-fix-validation-issues.md  backend-minimal-skeleton.md  deployment-railway-vercel.md  finish-reason-truncation-detection.md  finish-reason-truncation-mitigation.md  gemini-api-resilience.md  hebrew-rtl-support.md  mobile-support.md  phase1-foundation-setup.md  (+12 more)
client/: .env.example  index.html  package.json
server/: .env.example  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  database.py  main.py  model_config.py
server/app/agents/: __init__.py  architect.py  base.py  editor.py  interviewer.py  orchestrator.py  prompts.py  researcher.py  state.py  validator.py  youtube.py
server/app/middleware/: auth.py
server/app/models/: __init__.py  agent_trace.py  chat_history.py  draft.py  roadmap.py  session.py  user.py
server/app/routers/: __init__.py  auth.py  chat.py  drafts.py  roadmaps.py  roadmaps_create.py
server/app/services/: ai_service.py  sse_service.py  video_retry_service.py  youtube_service.py
server/app/utils/: __init__.py  language.py
server/tests/: __init__.py  conftest.py
server/tests/integration/: test_auth.py  test_chat.py  test_drafts.py  test_progress.py  test_roadmaps.py  test_roadmaps_create.py  test_sessions.py
server/tests/unit/: __init__.py  test_agents.py  test_editor_agent.py  test_language.py  test_model_config.py  test_network_retry.py  test_youtube_agent.py  test_youtube_agent_relevance.py  test_youtube_service.py
(+35 files in other folders)
